--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
@@ -18,17 +19,21 @@
     "@pdftron/webviewer": "^10.5.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@thednp/dommatrix": "^2.0.6",
     "axios": "^1.6.0",
+    "formik": "^2.4.5",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.5.1",
     "react-pdf-js": "^5.1.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
